# wall-e

./: .gitignore  Dockerfile  filebeat.yml  pyproject.toml
.github/workflows/: docker-image.yml
.github_old/workflows/: docker-image.yml
.run/: wall-e.run.xml
src/: main.py
src/client/routes/home/templates/: index.html
src/domain/features/authentication/models/authentication/: token.py  user_in_db.py
src/domain/features/authentication/services/: authentication_service.py
src/domain/features/parse_chatgpt_transcription/: title_summary.py
src/domain/features/parse_chatgpt_transcription/services/: transcription_formatter.py
src/domain/infrastructure/: settings.py
src/endpoints/: api_endpoints.py  auth_endpoints.py
src/tests/: test.py
