[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Chuck Conway <charles@cconway.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = {extras = ["all"], version = "^0.110.2"}
pydantic = "^2.7.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
